--- a/MusicApp/MusicApp/Module/Search/SearchViewController.xib
+++ b/MusicApp/MusicApp/Module/Search/SearchViewController.xib
@@ -12,6 +12,7 @@
             <connections>
                 <outlet property="searchBar" destination="Dzd-Sz-4DK" id="2Qh-9U-QeO"/>
                 <outlet property="tableView" destination="EQH-ee-Sf0" id="MCu-oA-8jH"/>
+                <outlet property="titleLabel" destination="0lt-zF-NXR" id="I1c-SC-1eA"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -30,14 +31,26 @@
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="EQH-ee-Sf0">
                     <rect key="frame" x="0.0" y="125" width="393" height="693"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <connections>
+                        <outlet property="dataSource" destination="i5M-Pr-FkT" id="rgH-iw-Kgv"/>
+                        <outlet property="delegate" destination="i5M-Pr-FkT" id="HyR-fW-su3"/>
+                    </connections>
                 </tableView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="iTunes'a Hoş Geldiniz" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0lt-zF-NXR">
+                    <rect key="frame" x="102.66666666666667" y="414" width="187.66666666666663" height="24"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
                 <constraint firstItem="EQH-ee-Sf0" firstAttribute="top" secondItem="Dzd-Sz-4DK" secondAttribute="bottom" id="6RK-JW-taw"/>
                 <constraint firstItem="Dzd-Sz-4DK" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="10" id="8EI-9j-hiR"/>
+                <constraint firstItem="0lt-zF-NXR" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="Aoa-Tf-U4i"/>
                 <constraint firstItem="Dzd-Sz-4DK" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="BRh-Xe-dVo"/>
+                <constraint firstItem="0lt-zF-NXR" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="Gnr-u2-0GY"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="EQH-ee-Sf0" secondAttribute="trailing" id="Uq1-Bu-Ja9"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="EQH-ee-Sf0" secondAttribute="bottom" id="YDM-dq-IKb"/>
                 <constraint firstItem="Dzd-Sz-4DK" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="b1b-QJ-MfU"/>
