--- a/MusicApp/MusicApp/Module/Search/Cell/MusicResultCell.xib
+++ b/MusicApp/MusicApp/Module/Search/Cell/MusicResultCell.xib
@@ -51,6 +51,7 @@
                                     <constraint firstAttribute="width" constant="50" id="HPL-vZ-d9v"/>
                                     <constraint firstAttribute="height" constant="35" id="tqO-hj-xUp"/>
                                 </constraints>
+                                <color key="tintColor" systemColor="linkColor"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" image="play.circle" catalog="system"/>
                                 <connections>
@@ -97,6 +98,9 @@
     </objects>
     <resources>
         <image name="play.circle" catalog="system" width="128" height="123"/>
+        <systemColor name="linkColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
