--- a/MusicApp/MusicApp/Module/Search/SearchViewController.xib
+++ b/MusicApp/MusicApp/Module/Search/SearchViewController.xib
@@ -36,8 +36,8 @@
                         <outlet property="delegate" destination="i5M-Pr-FkT" id="HyR-fW-su3"/>
                     </connections>
                 </tableView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="iTunes'a Hoş Geldiniz" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0lt-zF-NXR">
-                    <rect key="frame" x="102.66666666666667" y="414" width="187.66666666666663" height="24"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="--" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0lt-zF-NXR">
+                    <rect key="frame" x="187.66666666666666" y="414" width="17.666666666666657" height="24"/>
                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
