--- a/MusicApp/MusicApp/Module/Detail/DetailViewController.xib
+++ b/MusicApp/MusicApp/Module/Detail/DetailViewController.xib
@@ -26,26 +26,26 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mLi-7m-QM4">
-                    <rect key="frame" x="71.666666666666686" y="119" width="250" height="250"/>
+                    <rect key="frame" x="71.666666666666686" y="139" width="250" height="250"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="250" id="MOb-9c-5XR"/>
                         <constraint firstAttribute="height" constant="250" id="TAN-aM-iza"/>
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oIV-2H-zTQ">
-                    <rect key="frame" x="20" y="389" width="353" height="24"/>
+                    <rect key="frame" x="20" y="409" width="353" height="24"/>
                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                     <color key="textColor" systemColor="linkColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QJB-K9-YVY">
-                    <rect key="frame" x="20" y="429" width="353" height="24"/>
+                    <rect key="frame" x="20" y="449" width="353" height="24"/>
                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                     <color key="textColor" systemColor="linkColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4GI-NV-LyI">
-                    <rect key="frame" x="166.66666666666666" y="463" width="60" height="50"/>
+                    <rect key="frame" x="166.66666666666666" y="483" width="60" height="50"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="60" id="24s-7y-pYA"/>
                         <constraint firstAttribute="height" constant="50" id="E0F-TE-qfy"/>
@@ -58,19 +58,20 @@
                     </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o14-MC-40x">
-                    <rect key="frame" x="20" y="523" width="353" height="21"/>
+                    <rect key="frame" x="20" y="543" width="353" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WHg-tc-7fD">
-                    <rect key="frame" x="20" y="560" width="353" height="21"/>
+                    <rect key="frame" x="20" y="580" width="353" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Uz-DF-QEB">
-                    <rect key="frame" x="314" y="71" width="51" height="40"/>
+                    <rect key="frame" x="325" y="59" width="60" height="60"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="40" id="Pfb-Zh-CtS"/>
+                        <constraint firstAttribute="height" constant="60" id="Pfb-Zh-CtS"/>
+                        <constraint firstAttribute="width" constant="60" id="rRU-2C-JF8"/>
                     </constraints>
                     <state key="normal" title="Button"/>
                     <buttonConfiguration key="configuration" style="plain" image="heart" catalog="system"/>
@@ -92,12 +93,12 @@
                 <constraint firstItem="oIV-2H-zTQ" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="Zkt-a3-b1n"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="QJB-K9-YVY" secondAttribute="trailing" constant="20" id="bEv-2X-SsB"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="o14-MC-40x" secondAttribute="trailing" constant="20" id="bSC-Hd-PTU"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="2Uz-DF-QEB" secondAttribute="trailing" constant="28" id="gbv-ws-VUB"/>
-                <constraint firstItem="mLi-7m-QM4" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="60" id="iQi-hm-aBT"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="2Uz-DF-QEB" secondAttribute="trailing" constant="8" id="gbv-ws-VUB"/>
+                <constraint firstItem="mLi-7m-QM4" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="80" id="iQi-hm-aBT"/>
                 <constraint firstItem="o14-MC-40x" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="irW-co-rWc"/>
                 <constraint firstItem="4GI-NV-LyI" firstAttribute="top" secondItem="QJB-K9-YVY" secondAttribute="bottom" constant="10" id="lPl-YN-GUm"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="WHg-tc-7fD" secondAttribute="trailing" constant="20" id="lrk-gS-zrf"/>
-                <constraint firstItem="2Uz-DF-QEB" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="12" id="qOF-Ta-aY7"/>
+                <constraint firstItem="2Uz-DF-QEB" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="qOF-Ta-aY7"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="oIV-2H-zTQ" secondAttribute="trailing" constant="20" id="uMQ-lI-IBH"/>
                 <constraint firstItem="oIV-2H-zTQ" firstAttribute="top" secondItem="mLi-7m-QM4" secondAttribute="bottom" constant="20" id="wbY-en-Dk5"/>
                 <constraint firstItem="WHg-tc-7fD" firstAttribute="top" secondItem="o14-MC-40x" secondAttribute="bottom" constant="16" id="y36-Ll-giK"/>
